# swarm

./: .gitignore  .pre-commit-config.yaml  README.md  log.ipynb  pyproject.toml  requirements.txt  vibevolve.ipynb
.cursor/rules/: agents.mdc
.github/workflows/: pre-commit.yaml  tests.yaml
notebooks/: selfplay.ipynb  vibevolve.ipynb
swarm/: __main__.py  animate.py  app.py  batch.py  benchmark.py  env.py  optimize.py  rl.py  run.py  tournament.py  vibe.py  vibe_rl.py  vibevolve.py
swarm/agents/: __init__.py  adaptive_swarm.py  boid.py  center.py  center_swarm.py  chaser.py  clusters.py  concave_swarm.py  config_swarm.py  fleeing.py  fortress_swarm.py  health_swarm.py  hunter_swarm.py  neural.py  pairs.py  param_swarm.py  pincer_swarm.py  predator_boid.py  predator_swarm.py  random.py  ring_swarm.py  selfplay_v1.py  selfplay_v2.py  simple.py  smart_boid.py  spiral_swarm.py  squad_swarm.py  static_swarm.py  tactical_swarm.py  train_swarm.py  vibevolve_v1.py  vibevolve_v2.py  vibevolve_v3.py  vibevolve_v4.py  vibevolve_v5.py  vibevolve_v6.py  vibevolve_v7.py  vortex_swarm.py  vortex_swarm_v2.py
swarm/selfplay/: __init__.py  orchestration.py  start_workers.sh  worker.py
templates/: home.html
tests/: test_animate.py  test_tournament.py
